--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="mando">
                 <div id="swiched">
                     <div class="OFF" id="power"></div>
-                </div>
-                    <div class="i" id="information"></div>
+                </div>  
                 <div id="changes">
                     <div id="Volumen">Vol</div>
+                    <div class="i" id="info">i</div>
                     <div id="Canales">Prg</div>
                 </div>
                 <div id="fila1">
