--- a/index.html
+++ b/index.html
@@ -16,36 +16,36 @@
     <div class="container-fluid">
         <div class="container">
             <div id="television">
-                <div id="pantalla">
-                    <div id="canal"></div>
+                <div id="screen">
+                    <div id="channel"></div>
                     <div id="date"></div>
-                    <div id="hora"></div>
+                    <div id="hour"></div>
                 </div>
             </div>
 
-            <div class="mando">
-                <div id="swiched">
+            <div class="remote">
+                <div id="remote-menu">
                     <div class="OFF" id="power"></div>
                 </div>  
-                <div id="changes">
-                    <div id="Volumen">Vol</div>
-                    <div class="i" id="info">i</div>
-                    <div id="Canales">Prg</div>
+                <div id="vol-prg">
+                    <div id="volumen">Vol</div>
+                    <div class="information" id="info">i</div>
+                    <div id="channels">Prg</div>
                 </div>
-                <div id="fila1">
-                    <div class="boton" id="boton1">1</div>
-                    <div class="boton" id="boton2">2</div>
-                    <div class="boton" id="boton3">3</div>
+                <div id="buttonsup">
+                    <div class="button" id="button1">1</div>
+                    <div class="button" id="button2">2</div>
+                    <div class="button" id="button3">3</div>
                 </div>
-                <div id="fila2">
-                    <div class="boton" id="boton4">4</div>
-                    <div class="boton" id="boton5">5</div>
-                    <div class="boton" id="boton6">6</div>
+                <div id="middlebuttons">
+                    <div class="button" id="button4">4</div>
+                    <div class="button" id="button5">5</div>
+                    <div class="button" id="button6">6</div>
                 </div>
-                <div id="fila3">
-                    <div class="boton" id="boton7">7</div>
-                    <div class="boton" id="boton8">8</div>
-                    <div class="boton" id="boton9">9</div>
+                <div id="buttonsdown">
+                    <div class="button" id="button7">7</div>
+                    <div class="button" id="button8">8</div>
+                    <div class="button" id="button9">9</div>
                 </div>
             </div>
 
