--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive TV</title>
-
     <link href="./css/styles.css" rel="stylesheet" />
-
 </head>
-
 <body>
-
     <div class="container-fluid">
         <div class="container">
             <div id="television">
-                <div id="screen">
-                    <div id="channel"></div>
-                    <div id="date"></div>
-                    <div id="hour"></div>
+                <div id="screen" class="OFFTV">
+                    <div id="channel" class="text"></div>
+                    <div id="date" class="text"></div>
+                    <div id="hour" class="text"></div>
+                    <img id="start" class="image" src="./img/starttv.webp" />
+                    <img id="ch1" class="image" src="./img/channel1.webp" />
+                    <img id="ch2" class="image" src="./img/channel2.webp" />
+                    <img id="ch3" class="image" src="./img/channel3.webp" />
+                    <img id="ch4" class="image" src="./img/channel4.webp" />
+                    <img id="ch5" class="image" src="./img/channel5.webp" />
+                    <img id="ch6" class="image" src="./img/channel6.webp" />
+                    <img id="ch7" class="image" src="./img/channel7.webp" />
+                    <img id="ch8" class="image" src="./img/channel8.webp" />
+                    <img id="ch9" class="image" src="./img/channel9.webp" />
                 </div>
             </div>
 
